Snakes grow if they kill other snakes

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1 {
 	font-weight: bold; 	
 	padding: 10px;
 	padding-bottom: 0px;
+	margin-bottom: 2px;
 	text-align: center;
 	font-size: 32px;
 }
